# GInv

./: .gitignore  README.md
cython/: GInv.ipynb  ginv.pyx  setup.py  test.py
doc/: Doxyfile  allocator.dox  bmonom.dox  list.dox  rbtree.dox  timer.dox
ginv/: CMakeLists.txt  basis.cpp  basis.h  bmonom.cpp  bmonom.h  bpoly.cpp  bpoly.h  config.h.in  gb.cpp  gb.h  janet.cpp  janet.h  mcompletion.cpp  mcompletion.h  monom.cpp  monom.h  poly.cpp  poly.h  poly_int.cpp  poly_int.h  wrap.cpp  wrap.h
ginv/test/: CMakeLists.txt  gb.cpp  graph.cpp  janet.cpp  mcompletion.cpp  monom.cpp  poly_int.cpp  stattest.cpp
integer/: CMakeLists.txt  integer.h
poly/: CMakeLists.txt  bmonom.h  bpoly.h  config.h.in  gb.h  integer.cpp  integer.h  janet.cpp  janet.h  mcompletion.cpp  mcompletion.h  monom.cpp  monom.h  poly.cpp  poly.h  wrap.cpp
poly/test/: CMakeLists.txt  gb.cpp  graph.cpp  integer.cpp  janet.cpp  mcompletion.cpp  monom.cpp  poly.cpp  stattest.cpp
pyginv/: KDV symmetry.ipynb  README.md  README_ru.md  diff.ipynb  diff_ring.ipynb  gb.py  ginv.py  janet.ipynb  janet.py  monom.ipynb  monom.py  monomial.py  poly.ipynb  poly.py  poly_exmpl.ipynb  poly_ring.ipynb  polynomial.py  polynomial_ring.ipynb  schem.ipynb  Уравнение КДВ.ipynb  Уравнение Линя - Рейснера - Цзяня.ipynb
util/: CMakeLists.txt  allocator.cpp  allocator.h  config.h.in  hilbertpoly.cpp  hilbertpoly.h  integer.cpp  integer.h  list.h  randpermutation.cpp  randpermutation.h  rbtree.h  stack.h  timer.cpp  timer.h
util/test/: CMakeLists.txt  allocator.cpp  graph.cpp  hilbertpoly.cpp  integer.cpp  list.cpp  randpermutation.cpp  rbtree.cpp  stack.cpp  unittest.cpp
